# Restaurante-Reservation

./: package-lock.json  package.json
src/: App.css  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-05fd9e960efa746e9230851474bb420000de9c09535cce3b24f148672b1c1c86.json  query-0e16145e6cb5a1ac3fea4718e350bbc27150fca8459a4eca3c39ae58d5593333.json  query-13e1d7bb7ce31efb0f43fba0a4c3772b175aeb2f5b9594e5764b144affd8f6f5.json  query-233f28db925a5edc504cb5c09450c42078fa7604a696657b1b43d36c99432e1c.json  query-2438f8c55ad743a32f620cc6ba1a86db9c3f7829c47620229b1a9df3be5d43cb.json  query-2c78da6e18eeb2ca9f9973e16323d18afd524a6b46c63e3cbe65cc7977a80dbc.json  query-2de294c4c00cf35f0e4f103d18e51244f6e53012d16d3a00903b3cc95c9b1ee8.json  query-2ef13e660a75b84807cae0ab0f448383538c3a17a40449a1e8ef0e1e70f8dbf8.json  query-351ffa05958c5b28196f2cd0cd9e84bb05c5798c50e5de6cfc9718f7a5a01f56.json  query-3b355deace7ee6c4e30ba958acad8824a11c9147ea3e00f573262ad48d6b1249.json  query-4dfe05661a3d64bb69a6dc541accb59e0031b781b82c0e89224fe8fb1618a498.json  query-5057e70de7302c23a12788c1868940d5cf3f8f343683ab9726f02fa6ba6bd62b.json  query-52a1129d371b4da1a21e6fabecfcb33e982874596c013b6f1ec7e1c6ead0179c.json  query-55a944ffdcee989ef895b04f156dbc7c769ae08e8384276cc73bc8e56632108c.json  query-5c70e22c3217c79707efa47e89643e72d4c64a35b351a46e98da7a4b19197235.json  query-5f361124be34e57fda83efc3cd374cbe6fdc0fcb9e837c410cdeb45a19e6e418.json  query-60d14903aace7dd443a3e707a9afeef7e09b458cb3a0593af6b0b6d198fffd79.json  query-6a20af14f328a97b2f31972d7d53602a4965860ad75d677bc091b5a04149b253.json  (+20 more)
(+20 files in other folders)
